# simple-spectrogram

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: spectrogram.h
src/app/: main.cpp
